Updated readme and example config

--- a/README.html
+++ b/README.html
@@ -66,14 +66,13 @@ a:hover {
 	<li><a href="#s4">4. Support</a>
 	<ul>
 		<li><a href="#s4s1">4.1. Website</a></li>
-		<li><a href="#s4s2">4.2. Developer</a></li>
 	</ul>
 	</li>
 </ul>
 
 <h2><a name="s1">1. Introduction</a></h2>
 <p>
-kexec-loader is a Linux based bootloader that allows you to boot Linux and multiboot systems from storage devices your BIOS does not support, such as USB drives and PCI expansion cards. It fits on a 1.44MB floppy, supports most block devices supported by Linux and is easy to use. kexec-loader supports reading GRUB configuration files, this allows kexec-loader to be used as a drop-in replacement for GRUB.
+kexec-loader is a Linux based bootloader that allows you to boot Linux and multiboot systems from storage devices your BIOS does not support, such as USB drives and PCI expansion cards. It fits on a 1.44MB floppy, supports most block devices supported by Linux and is easy to use. kexec-loader supports reading GRUB configuration files, this allows it to be used as a drop-in replacement for GRUB.
 </p>
 <p>
 If you need to build or modify kexec-loader for some reason please see the build.html file in the source archive, this details how to compile kexec-loader and build disk images.
@@ -351,13 +350,6 @@ The following options can be passed to kexec-loader via the kernel command line.
 <p>
 For information on kexec-loader, including current development and latest
 releases, please see the project <a href="http://www.solemnwarning.net/kexec-loader/">website</a>.
-</p>
-
-<h3><a name="s4s2">4.2. Developer</a></h3>
-<p>
-The developer of kexec-loader, Daniel Collins (aka solemnwarning), can often be
-found on the Freenode IRC network. To contact solemnwarning, you can use the
-following e-mail address: <em>solemnwarning@solemnwarning.net</em>.
 </p>
 </body>
 </html>
